It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Fri, Jul 24, 2009
---------------------------------------------------------------------
- Fixed a typo that affected individual permissions (thanks, Guillermo!)

Thu, Jul 23, 2009
---------------------------------------------------------------------
- Made UUID support optional (affects MySQL v5+ users only).
- Removed task-specific flash area; changed to use generic flash messages instead.
- Store current user in the class to make it easier to access it from observers.
- Removed password length restriction to allow blank passwords.

Tue, Jul 21, 2009
---------------------------------------------------------------------
- Upgraded HAML/SASS to version 2.2.2 (Powerful Penny) and made it a plugin.
- Ruby 1.9.1 compatibility fixes.

Mon, Jul 20, 2009
---------------------------------------------------------------------
- Happy birthday, Lana!
- Annotated models for schema version #19.
- Implemented Profile > Change Password.
- Added ability to show flash notices from RJS templates.
- Removed [open_id_authentication] plugin since it's no longer needed.
- First gathering at #fatfreecrm channel on irc.freenode.net (thanks, Eric!)

Sun, Jul 19, 2009
---------------------------------------------------------------------
- Completed upgrade to Authlogic 2.1.2
- Removed support for OpenID authentication

Sat, Jul 18, 2009
---------------------------------------------------------------------
- Upgrading to Authlogic 2.1.2

Wed, Jul 15, 2009
---------------------------------------------------------------------
- Moved avatars in separate directories based on who the avatar belongs to.
- Implemented avatar_for() to encapsulate uploaded image, gravatar, and default icon.
- Fixed Paperclip bug when :url option is a lambda and not a string.
- Release 0.9.4.

Mon, Jul 13, 2009