@@ -1,5 +1,0 @@
-A request to reset your password has been made. If you did not make this request, simply ignore this email. If you did make this request just click the link below:
-
-<%= @edit_password_url %>
-
-If the above URL does not work try copying and pasting it into your browser. If you continue to have problem please feel free to contact us.
