@@ -1,7 +1,6 @@
 .standalone
   - form_tag passwords_path do
     .title Forgot Password
-    = flash[:notice]
     .intro Please specify your email address and the instructions to reset your password will be sent to you.
     .section
       .label Email address:
